till now project progress

--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -19,7 +19,7 @@
                 <h1 class="xl:text-5xl lg:text-4xl text-2xl font-semibold" style="margin-bottom: 0.5em;">HELLO,
                     {{request.user.first_name}}</h1>
                 <h3 class="xl:text-2xl lg:text-xl text-lg xl:my-4 lg:my-3 font-semibold" style="line-height: 1.6rem;">
-                    here is the Classes you have Today</h3>
+                    here is the list of Classes you have Today</h3>
                 <h3 class="xl:text-2xl lg:text-xl text-lg font-semibold lg:my-2 my-1"
                     style="margin-top: 1em; margin-bottom: 1em;" id="good-day">Have A Good Day!</h3>
                 <button
