done with healthcare model and data

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -52,7 +52,7 @@
 </head>
 
 
-<body style="margin-bottom: 3em;">
+<body class="mb-12 md:mb-0">
     <nav id="nav-mobile">
         {% include 'base/nav-mobile.html' %}
     </nav>
