--- a/templates/communities/community/community_create_form.html
+++ b/templates/communities/community/community_create_form.html
@@ -18,7 +18,7 @@
         <div onclick="setTheme(3,this)" class="theme3 inline-block p-4 xs:p-6 md:p-8 theme-btn"></div>
         <div onclick="setTheme(4,this)" class="theme4 inline-block p-4 xs:p-6 md:p-8 theme-btn"></div>
     </div>
-    <button type="submit" class="btn btn-primary btn-block">create new communitys</div>
+    <button type="submit" class="btn btn-primary btn-block mb-10">create new communitys</button>
 </form>
 <script>
     let element = document.querySelector('#id_theme')
@@ -31,4 +31,7 @@
 
     }
 </script>
+
+
+
 {% endblock %}
