--- a/templates/base/nav.html
+++ b/templates/base/nav.html
@@ -8,6 +8,10 @@
     .nav-link {
         border: 2px solid transparent;
     }
+
+    .dropdown:hover .dropdown-menu {
+        display: block;
+    }
 </style>
 <nav class="flex items-center justify-between w-full bg-teal-200 py-2 font-sans">
     <a href="{% url 'user:home'%}" class="ml-10">
@@ -18,25 +22,43 @@
         </div>
     </a>
     <div class="nav-list ml-4  flex flex-row justify-around ">
+        <a href="{% url 'user:home' %}"
+            class="nav-link text-base capitalize text-teal-800  mx-2 p-2 hover:text-blue-500">home</a>
         <a href="{% url 'community:all' 'followed' %}"
             class="nav-link text-base capitalize text-teal-800  mx-2 p-2 hover:text-blue-500">community</a>
-        <a href="{% url 'qr:generateqr' %}"
+        <!-- <a href="{% url 'qr:generateqr' %}"
             class="nav-link text-base capitalize text-teal-800 mx-2  p-2 hover:text-blue-500">
             {% if isInsideHostel%}
             <p>checkout</p>
             {% else %}
             <p>checkin</p>
             {%endif%}
-        </a>
+        </a> -->
         <a href="#contact" class="nav-link text-base capitalize text-teal-800 mx-2 p-2  hover:text-blue-500">contact
             us</a>
-        <a href="{% url 'user:logout'%}"
-            class="nav-link text-base capitalize text-teal-800  mx-2 p-2 hover:text-blue-500">logout</a>
+        <!-- <a href="{% url 'user:logout'%}"
+            class="nav-link text-base capitalize text-teal-800  mx-2 p-2 hover:text-blue-500">logout</a> -->
     </div>
 
-    <div class=" mr-10 capitalize text-lg font-bold">
-        <i class="fa fa-user text-white text-2xl"></i>
-        hello,{{request.user.first_name}}
+
+    <div class="dropdown inline-block relative mr-10">
+        <button class="text-gray-700 font-semibold py-2 px-4 rounded inline-flex items-center">
+            <span class=" capitalize text-lg font-bold">
+                <i class="fa fa-user text-white text-2xl"></i>
+                hello,{{request.user.first_name}}</span>
+            <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /> </svg>
+        </button>
+        <ul class="dropdown-menu absolute hidden text-gray-700 pt-1 w-full uppercase">
+            <li class=""><a class="rounded-t bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
+                    href="{% url 'qr:generateqr' %}">profile</a></li>
+            <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
+                    href="{%url 'healthcare:all' %}">healthcare</a>
+            </li>
+            <li class=""><a class="rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
+                    href="{% url 'user:logout'%}">logout</a></li>
+        </ul>
     </div>
+
 
 </nav>
