--- a/templates/healthcare/timing_list.html
+++ b/templates/healthcare/timing_list.html
@@ -3,31 +3,175 @@
 {% block body %}
 <h1 class="text-center text-5xl capitalize mb-10">student details</h1>
 <div class="flex flex-col  items-center w-full justify-around">
-    {% for day in days %}
+    <!-- monday -->
     <div class="w-screen mb-10 flex justify-start items-center flex-col">
         <div class="bg-blue-800 text-sm md:text-md xl:text-lg lg:text-lg sm:text-sm md:w-1/2 xl:w-1/3 sm:w-2/3 w-3/4"
             style="border-top-left-radius: 1.5rem; border-top-right-radius: 1.5rem; min-width: 360px;">
             <h1 class="text-center my-3 text-white font-semibold uppercase">
-                {{day}}</h1>
+                {{monday.0.day}}</h1>
         </div>
 
         <div class="xl:w-1/3 md:w-1/2 sm:w-2/3 w-3/4 shadow-lg hover:shadow-xl transition-shadow duration-500 ease-in-out bg-gray-200 flex flex-col"
             style="border-bottom-left-radius: 1.5rem; border-bottom-right-radius: 1.5rem; min-width: 360px;">
-            {% for doc in docs %}
-            {%if doc.day == day %}
+            {% for doc in monday %}
+
             <div
                 class="w-3/4 flex ml-2 mb-2 justify-between flex-row md:text-md sm:text-sm text-smlg:text-lg xl:text-lg">
                 <p>{{doc.doc}}</p>
                 <p>{{doc.doc.spec}}</p>
-                <p>{{doc.day}}</p>
+
                 <p>{{doc.start_time}}</p>
                 <p>{{doc.end_time}}</p>
             </div>
-            {%endif%}
+
             {%endfor%}
         </div>
     </div>
-    {%endfor%}
+    <!-- tuesday -->
+    <div class="w-screen mb-10 flex justify-start items-center flex-col">
+        <div class="bg-blue-800 text-sm md:text-md xl:text-lg lg:text-lg sm:text-sm md:w-1/2 xl:w-1/3 sm:w-2/3 w-3/4"
+            style="border-top-left-radius: 1.5rem; border-top-right-radius: 1.5rem; min-width: 360px;">
+            <h1 class="text-center my-3 text-white font-semibold uppercase">
+                {{tuesday.0.day}}</h1>
+        </div>
+
+        <div class="xl:w-1/3 md:w-1/2 sm:w-2/3 w-3/4 shadow-lg hover:shadow-xl transition-shadow duration-500 ease-in-out bg-gray-200 flex flex-col"
+            style="border-bottom-left-radius: 1.5rem; border-bottom-right-radius: 1.5rem; min-width: 360px;">
+            {% for doc in tuesday %}
+
+            <div
+                class="w-3/4 flex ml-2 mb-2 justify-between flex-row md:text-md sm:text-sm text-smlg:text-lg xl:text-lg">
+                <p>{{doc.doc}}</p>
+                <p>{{doc.doc.spec}}</p>
+
+                <p>{{doc.start_time}}</p>
+                <p>{{doc.end_time}}</p>
+            </div>
+
+            {%endfor%}
+        </div>
+    </div>
+    <!-- wednesday -->
+    <div class="w-screen mb-10 flex justify-start items-center flex-col">
+        <div class="bg-blue-800 text-sm md:text-md xl:text-lg lg:text-lg sm:text-sm md:w-1/2 xl:w-1/3 sm:w-2/3 w-3/4"
+            style="border-top-left-radius: 1.5rem; border-top-right-radius: 1.5rem; min-width: 360px;">
+            <h1 class="text-center my-3 text-white font-semibold uppercase">
+                {{wednesday.0.day}}</h1>
+        </div>
+
+        <div class="xl:w-1/3 md:w-1/2 sm:w-2/3 w-3/4 shadow-lg hover:shadow-xl transition-shadow duration-500 ease-in-out bg-gray-200 flex flex-col"
+            style="border-bottom-left-radius: 1.5rem; border-bottom-right-radius: 1.5rem; min-width: 360px;">
+            {% for doc in wednesday %}
+
+            <div
+                class="w-3/4 flex ml-2 mb-2 justify-between flex-row md:text-md sm:text-sm text-smlg:text-lg xl:text-lg">
+                <p>{{doc.doc}}</p>
+                <p>{{doc.doc.spec}}</p>
+
+                <p>{{doc.start_time}}</p>
+                <p>{{doc.end_time}}</p>
+            </div>
+
+            {%endfor%}
+        </div>
+    </div>
+    <!-- thrusday -->
+    <div class="w-screen mb-10 flex justify-start items-center flex-col">
+        <div class="bg-blue-800 text-sm md:text-md xl:text-lg lg:text-lg sm:text-sm md:w-1/2 xl:w-1/3 sm:w-2/3 w-3/4"
+            style="border-top-left-radius: 1.5rem; border-top-right-radius: 1.5rem; min-width: 360px;">
+            <h1 class="text-center my-3 text-white font-semibold uppercase">
+                {{thrusday.0.day}}</h1>
+        </div>
+
+        <div class="xl:w-1/3 md:w-1/2 sm:w-2/3 w-3/4 shadow-lg hover:shadow-xl transition-shadow duration-500 ease-in-out bg-gray-200 flex flex-col"
+            style="border-bottom-left-radius: 1.5rem; border-bottom-right-radius: 1.5rem; min-width: 360px;">
+            {% for doc in thrusday %}
+
+            <div
+                class="w-3/4 flex ml-2 mb-2 justify-between flex-row md:text-md sm:text-sm text-smlg:text-lg xl:text-lg">
+                <p>{{doc.doc}}</p>
+                <p>{{doc.doc.spec}}</p>
+
+                <p>{{doc.start_time}}</p>
+                <p>{{doc.end_time}}</p>
+            </div>
+
+            {%endfor%}
+        </div>
+    </div>
+    <!-- friday -->
+    <div class="w-screen mb-10 flex justify-start items-center flex-col">
+        <div class="bg-blue-800 text-sm md:text-md xl:text-lg lg:text-lg sm:text-sm md:w-1/2 xl:w-1/3 sm:w-2/3 w-3/4"
+            style="border-top-left-radius: 1.5rem; border-top-right-radius: 1.5rem; min-width: 360px;">
+            <h1 class="text-center my-3 text-white font-semibold uppercase">
+                {{friday.0.day}}</h1>
+        </div>
+
+        <div class="xl:w-1/3 md:w-1/2 sm:w-2/3 w-3/4 shadow-lg hover:shadow-xl transition-shadow duration-500 ease-in-out bg-gray-200 flex flex-col"
+            style="border-bottom-left-radius: 1.5rem; border-bottom-right-radius: 1.5rem; min-width: 360px;">
+            {% for doc in friday %}
+
+            <div
+                class="w-3/4 flex ml-2 mb-2 justify-between flex-row md:text-md sm:text-sm text-smlg:text-lg xl:text-lg">
+                <p>{{doc.doc}}</p>
+                <p>{{doc.doc.spec}}</p>
+
+                <p>{{doc.start_time}}</p>
+                <p>{{doc.end_time}}</p>
+            </div>
+
+            {%endfor%}
+        </div>
+    </div>
+    <!-- saturday -->
+    <div class="w-screen mb-10 flex justify-start items-center flex-col">
+        <div class="bg-blue-800 text-sm md:text-md xl:text-lg lg:text-lg sm:text-sm md:w-1/2 xl:w-1/3 sm:w-2/3 w-3/4"
+            style="border-top-left-radius: 1.5rem; border-top-right-radius: 1.5rem; min-width: 360px;">
+            <h1 class="text-center my-3 text-white font-semibold uppercase">
+                {{saturday.0.day}}</h1>
+        </div>
+
+        <div class="xl:w-1/3 md:w-1/2 sm:w-2/3 w-3/4 shadow-lg hover:shadow-xl transition-shadow duration-500 ease-in-out bg-gray-200 flex flex-col"
+            style="border-bottom-left-radius: 1.5rem; border-bottom-right-radius: 1.5rem; min-width: 360px;">
+            {% for doc in saturday %}
+
+            <div
+                class="w-3/4 flex ml-2 mb-2 justify-between flex-row md:text-md sm:text-sm text-smlg:text-lg xl:text-lg">
+                <p>{{doc.doc}}</p>
+                <p>{{doc.doc.spec}}</p>
+
+                <p>{{doc.start_time}}</p>
+                <p>{{doc.end_time}}</p>
+            </div>
+
+            {%endfor%}
+        </div>
+    </div>
+    <!-- sunday -->
+    <div class="w-screen mb-10 flex justify-start items-center flex-col">
+        <div class="bg-blue-800 text-sm md:text-md xl:text-lg lg:text-lg sm:text-sm md:w-1/2 xl:w-1/3 sm:w-2/3 w-3/4"
+            style="border-top-left-radius: 1.5rem; border-top-right-radius: 1.5rem; min-width: 360px;">
+            <h1 class="text-center my-3 text-white font-semibold uppercase">
+                {{sunday.0.day}}</h1>
+        </div>
+
+        <div class="xl:w-1/3 md:w-1/2 sm:w-2/3 w-3/4 shadow-lg hover:shadow-xl transition-shadow duration-500 ease-in-out bg-gray-200 flex flex-col"
+            style="border-bottom-left-radius: 1.5rem; border-bottom-right-radius: 1.5rem; min-width: 360px;">
+            {% for doc in sunday %}
+
+            <div
+                class="w-3/4 flex ml-2 mb-2 justify-between flex-row md:text-md sm:text-sm text-smlg:text-lg xl:text-lg">
+                <p>{{doc.doc}}</p>
+                <p>{{doc.doc.spec}}</p>
+
+                <p>{{doc.start_time}}</p>
+                <p>{{doc.end_time}}</p>
+            </div>
+
+            {%endfor%}
+        </div>
+    </div>
+
 
 
 </div>
