--- a/templates/user/eCard.html
+++ b/templates/user/eCard.html
@@ -8,6 +8,9 @@
         <!-- qr -->
         <img src="{{qr_url}}" alt="profile pic" id="qr" class=" text-center mx-auto">
     </div>
+    <!-- logout btn for small screen devices -->
+    <a href="{% url 'user:logout'%}"
+        class="my-10 block text-center text-lg rounded bg-blue-500 px-4 py-2 md:hidden">logout</a>
     <!-- e card container -->
     <div class="w-screen md:w-1/2 mb-10 ">
         <!-- e card -->
