--- a/templates/healthcare/timing_list.html
+++ b/templates/healthcare/timing_list.html
@@ -11,12 +11,12 @@
                 {{monday.0.day}}</h1>
         </div>
 
-        <div class="xl:w-1/3 md:w-1/2 sm:w-2/3 w-3/4 shadow-lg hover:shadow-xl transition-shadow duration-500 ease-in-out bg-gray-200 flex flex-col"
+        <div class="xl:w-1/3 md:w-1/2 sm:w-2/3 w-3/4 shadow-lg hover:shadow-xl transition-shadow duration-500 ease-in-out bg-gray-200 flex flex-col items-center"
             style="border-bottom-left-radius: 1.5rem; border-bottom-right-radius: 1.5rem; min-width: 360px;">
             {% for doc in monday %}
 
             <div
-                class="w-3/4 flex ml-2 mb-2 justify-between flex-row md:text-md sm:text-sm text-smlg:text-lg xl:text-lg">
+                class="w-3/4 flex ml-2 mb-2 my-2 justify-between  flex-row md:text-md sm:text-sm text-smlg:text-lg xl:text-lg">
                 <p>{{doc.doc}}</p>
                 <p>{{doc.doc.spec}}</p>
 
