--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -29,7 +29,7 @@
 }
 </style>
 
-<div class="w-full h-screen flex items-center justify-center my-12">
+<div class="w-full flex items-center justify-center my-12">
     <div class="bg-white w-11/12 sm:w-3/5 md:w-1/2 xl:w-3/5 lg:w-3/4 flex" style="border-bottom-right-radius: 1.5rem; border-top-left-radius: 1.5rem;">
         <div class="w-full xl:w-1/2 lg:w-3/5 flex justify-center items-center flex-col mx-0">
                 <div class="flex justify-center items-center flex-col">
