--- a/templates/healthcare/timing_list.html
+++ b/templates/healthcare/timing_list.html
@@ -1,7 +1,7 @@
 {% extends 'base/base.html' %}
 {% load static %}
 {% block body %}
-<h1 class="text-center text-5xl capitalize mb-10">student details</h1>
+<h1 class="text-center text-5xl capitalize mb-10">Dispensary Details</h1>
 <div class="flex flex-col  items-center w-full justify-around">
     <!-- monday -->
     <div class="w-screen mb-10 flex justify-start items-center flex-col">
