--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -41,11 +41,11 @@
     <h1 class="text-2xl text-gray-600 pl-4 py-3 bg-gray-200">Suggested Communities : </h1>
     <div class="horizontal-scroll flex py-3 flex-row bg-gray-200 hover:shadow-xl transition-all duration-500 ease-in-out" style="overflow-x: auto; font-size: 16px;">
         {% for community in suggested %}
-        <div class=" border border-blue-500 hover:bg-gray-500 transition-all duration-500 ease-in-out bg-gray-400 py-2 px-8 m-2 rounded w-full" id="{{community.slug}}" style="overflow: auto; min-width: 420px; height: 18rem;">
+        <div class=" border border-blue-500 hover:bg-gray-500 transition-all duration-500 ease-in-out bg-gray-400 py-2 px-8 m-2 rounded w-full  h-64" id="{{community.slug}}" style="overflow: auto;">
             <!-- image and name and admin -->
             <div class="flex  w-full flex-row ">
 
-                <img src="/{{community.community_img.url}}" class="w-24  h-24 my-3 mr-4 md:mx-0 rounded-full">
+                <img src="/{{community.community_img.url}}" class="w-24  h-24 my-2 mr-4 md:mx-0 rounded-full">
 
                 <div class=" flex flex-col ">
                     <h1 class="text-base sm:text-3xl md:text-xl text-center"> <a
