--- a/Mnnit Utilities/src/main/res/drawable/border_red.xml
+++ b/Mnnit Utilities/src/main/res/drawable/border_red.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-<solid
-    android:color="#F45403"
-    />
+    <stroke
+        android:width="2sp"
+        android:color="#00108A"
+        />
     <corners
-
-        android:radius="1000sp"
+            android:radius="10sp"
         />
 </shape>
