--- a/Mnnit Utilities/src/main/res/drawable/rounded_bg_white.xml
+++ b/Mnnit Utilities/src/main/res/drawable/rounded_bg_white.xml
@@ -6,6 +6,10 @@
         android:topRightRadius="20sp"
         android:bottomLeftRadius="20sp"
         />
+    <stroke
+        android:width="1sp"
+        android:color="#00EF1B"
+        />
     <solid
         android:color="#fff"
         />
