--- a/Mnnit Utilities/src/main/res/layout/activity_popup_window_ok.xml
+++ b/Mnnit Utilities/src/main/res/layout/activity_popup_window_ok.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D1CFCF"
+    android:background="#A1AAFFA4"
     android:gravity="center"
     android:paddingLeft="40sp"
     android:paddingTop="95sp"
@@ -12,29 +12,22 @@
     android:paddingBottom="95sp"
     tools:context=".PopupWindow_ok">
 
-    <pl.droidsonroids.gif.GifImageView
-        android:id="@+id/gif_success"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/rounded_bg_white"
-        android:src="@drawable/success_tick"
-        android:visibility="invisible" />
-
     <LinearLayout
         android:id="@+id/pop_layout_li"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:background="@drawable/rounded_bg_white"
+        android:elevation="15sp"
         android:gravity="center"
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="147dp"
-            android:layout_height="147dp"
+            android:id="@+id/imgv_user"
+            android:layout_width="218dp"
+            android:layout_height="193dp"
             android:layout_marginBottom="30sp"
-            app:srcCompat="@drawable/ic_public_black" />
+            app:srcCompat="@drawable/ic_person_orange_24dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -146,5 +139,14 @@
             android:src="@drawable/img_btn_bg_foreground" />
 
     </LinearLayout>
+
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/gif_success"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/rounded_bg_white"
+        android:elevation="15sp"
+        android:src="@drawable/success_tick"
+        android:visibility="invisible" />
 
 </RelativeLayout>
